# cookie-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
cookie_rl/: bc_pretrain.py  browser_env.py  gym_env.py  harness.js  train.py
cookie_rl/agents/: greedy.py
eval/: compare.py  eval_checkpoint.py
scripts/: bench_throughput.py  setup_game.sh  test_fidelity.py
