[project]
name = "cookie-rl"
version = "0.1.0"
description = "Cookie Clicker max-efficiency AI: real game headless + accelerated, PPO vs greedy baseline"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "gymnasium>=1.0",
    "numpy>=1.26",
    "sb3-contrib>=2.4",
    "stable-baselines3>=2.4",
    "tensorboard>=2.16",
    "matplotlib>=3.8",
]

[tool.uv]
package = false
